# leo

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt  run.sh
docs/: Project.md  appworld-supervised-tuning-plan.md  appworld_status.md  leo-agentspec-mental-model-and-packaging.md  leo-generic-first-appworld-plan-milestones.md  leo-skills-full-support-requirements-and-design.md  reflection-design.md  subagent-design.md  todo.md
docs/old docs do not use/: appworld_status.md  leo-generic-first-appworld-plan.md  leo-milestone-1-full-agentskills-support.md
prompts/: leonardo.md
samples/: README.md  react_news_brief_e2e.py  react_web_search_e2e.py
scripts/: build_code_dict.py  run_appworld_tuning_sweep.py
skills-repo/buffer-social/: README.md  SKILL.md  _meta.json  buffer.js  package-lock.json  package.json  vitest.config.js
skills-repo/google-sheets/: README.md  SKILL.md
skills/magic-word/: SKILL.md
test/: fakes.py  t1.py  t2.py  test_agent_spec.py  test_appworld_run.py  test_appworld_sweep.py  test_appworld_tuning.py  test_cli.py  test_core_tools.py  test_env.py  test_environment_adapters.py  test_execution_context.py  test_mcp_tools.py  test_plan_execute_agent.py  test_react_agent.py  test_session.py  test_simple_agent.py  test_skills_registry.py  test_trace_gist.py  treact_agent.py  tsearch.py  tsimple_agent.py
tests/: conftest.py  test_exit_command.py  test_injection.py  test_lesson_store.py  test_reflector.py  test_retrieval.py  test_run_reflection.py  test_run_turn.py  test_safety.py  test_schema.py  test_toggles.py  test_writer.py
(+91 files in other folders)
