[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "leo"
version = "0.1.0"
description = "LEO: an LLM-based agent framework built from scratch."
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0",
    "httpx>=0.27",
    "trafilatura>=2.0",
    "tavily-python>=0.5",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
]

[project.scripts]
leo = "leo.cli.leo:main"

[tool.setuptools.packages.find]
where = ["src"]
